fixed response for enrollment controller